# StardewSeedApp

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: api.yml  app.yml  cfn.yml  job.yml  main.yml  runner.yml
api/: Dockerfile  Makefile  pyproject.toml
api/api/: main.py
api/api/auth/: token.py
api/api/models/: job.py  jobs.py  requirements.py  user.py
api/api/routes/: job.py  user.py
api/api/services/: ddb.py  secrets.py  ssm.py
api/cfn/: ecr.yml  lambda-api.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js
app/cfn/: template.yml
app/src/: App.tsx  MainRoutes.tsx  UserProvider.tsx  api.tsx  types.d.ts  utils.tsx
app/src/components/: JobItem.tsx  Loading.tsx  LoginPage.tsx
app/src/components/Cards/: Card.tsx  CardButtons.tsx  CardHeader.tsx
app/src/components/Dashboard/: Navbar.tsx  (+1 more)
app/src/routes/: create.tsx  home.tsx  job.tsx  share.tsx
cfn/: bucket.yml  dynamodb.yml
runner/: .gitignore  Dockerfile  Makefile  Program.cs  README.md  runner.csproj
runner/cfn/: ecr.yml  ecs.yml
runner/data/: example.json
runner/models/: job.cs  requirements.cs
runner/routines/: NightEvent.cs  Quests.cs  StepPrediction.cs  Weather.cs
runner/services/: ddb.cs
runner/stardew/: Farmer.cs  Game1.cs  GameLocation.cs  GameStateQuery.cs  GameStateQueryContext.cs  Item.cs  LegacyShims.cs  ObjectInfo.cs  OtherNameAttributes.cs  Utility.cs
runner/stardew/Enums/: Fertilizer.cs  Quality.cs  Season.cs
runner/stardew/Extensions/: RandomExtensions.cs
runner/stardew/Hashing/: HashUtility.cs  IHashUtility.cs
(+11 files in other folders)
