[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Underscore76 <theunderscore76@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.0"}
bcrypt = "^4.2.0"
boto3 = "^1.35.14"


[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["essential", "secretsmanager", "ssm"], version = "^1.35.15"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
